fix: update eslint and fix warnings (#1378)
* fix(cli): upgrade eslint

* fix(cli): update eslint version and fix config logic

* fix(cli): add missing files

* fix(cli): add version 14.3.14-beta.0

* fix(cli): update glob to 11.0.0 and fix tests

* fix(cli): remove rimraf under 5 versions, inflight and glob under 10 version from yarn lock

* fix(cli): fix yarn lock and release verison 14.3.14-beta.1

* fix(cli): upgrade eslint plugin react hooks to fix react error

* fix(cli): release version 14.3.14-beta.2

* fix(cli): upgrade coveralls version to 2.4.0

* fix(cli): revert coveralls upgrade

* fix(cli): turn off no internal modules import

* fix(cli): fix typo

* fix(cli): revert change in configuration

* fix(cli): increase chunk size when build react and web components add terser to minify the code

* chore(cli): release version 14.3.14-beta.3

* fix(cli): change eslint config file names

* fix(cli): add packages in angular package json

* fix(cli): add missing configs for angular eslint

* chore(cli): release version 14.3.14-beta.4

* fix(cli): add terser options

* chore(cli): release version 14.3.14-beta.5

* fix(cli): update eslint configuration for react and wc

* fix(cli): update lint command in package json files

* chore(cli): release version 14.3.14-beta.6

* chore(cli): release version 14.3.14-beta.7

* fix(cli): fix configurations for es lint

* chore(cli): release version 14.3.14-beta.8

* fix(cli): remove pure comment error from wc projects

* fix(cli): add fixes in angular configuration

* chore(cli): release version 14.3.14-beta.9

* fix(cli): add option for angular templates to disable optionalChainNotNullable check

* chore(cli): release version 14.3.14-beta.10

* fix: build and lint errors from a project for all components and scenarios

* fix: clear more lint warnings and build errors.

---------

Co-authored-by: Hristo Hristov <HHristov@infragistics.com>
Co-authored-by: lipata <nikolay.alipiev@gmail.com>

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 		"test": "nyc npm run jasmine",
 		"jasmine": "node spec/jasmine-runner.js",
 		"coverage": "nyc report --report-dir",
-		"lint": "eslint -c .eslintrc.json ./**/*.ts",
+		"lint": "eslint -c eslint.config.mjs ./**/*.ts",
 		"config-schema": "typescript-json-schema packages/core/types/Config.ts Config -o packages/core/config/Config.schema.json"
 	},
 	"nyc": {
@@ -65,9 +65,9 @@
 		"@types/node": "^22.5.5",
 		"@typescript-eslint/eslint-plugin": "^8.21.0",
 		"@typescript-eslint/parser": "^8.21.0",
-		"coveralls-next": "^4.2.1",
 		"browser-sync": "^3.0.3",
-		"eslint": "^8.57.0",
+		"coveralls-next": "^4.2.1",
+		"eslint": "^9.20.0",
 		"eslint-plugin-import": "^2.29.1",
 		"eslint-plugin-prefer-arrow": "^1.2.3",
 		"eslint-plugin-unicorn": "^52.0.0",
