--- a/packages/igx-templates/igx-ts-legacy/projects/_base/files/angular.json
+++ b/packages/igx-templates/igx-ts-legacy/projects/_base/files/angular.json
@@ -52,7 +52,7 @@
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "6kb",
+                  "maximumWarning": "8kb",
                   "maximumError": "2mb"
                 }
               ],
@@ -116,6 +116,7 @@
         "lint": {
           "builder": "@angular-eslint/builder:lint",
           "options": {
+            "eslintConfig": "eslint.config.mjs",
             "lintFilePatterns": [
               "src/**/*.ts",
               "src/**/*.html"
