--- a/packages/cli/templates/react/igr-ts/projects/_base/files/package.json
+++ b/packages/cli/templates/react/igr-ts/projects/_base/files/package.json
@@ -21,8 +21,8 @@
     "@typescript-eslint/eslint-plugin": "^8.21.0",
     "@typescript-eslint/parser": "^8.21.0",
     "@vitejs/plugin-react": "^4.0.3",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint": "^9.20.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "jsdom": "^22.1.0",
     "typescript": "~5.5.4",
@@ -34,7 +34,7 @@
     "start": "vite",
     "build": "tsc && node --max-old-space-size=4096 node_modules/vite/bin/vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
     "test": "vitest"
   },
   "browserslist": [
