--- a/packages/cli/templates/webcomponents/igc-ts/projects/_base_with_home/files/package.json
+++ b/packages/cli/templates/webcomponents/igc-ts/projects/_base_with_home/files/package.json
@@ -16,7 +16,7 @@
     "start": "tsc && concurrently -k -r \"tsc --watch\" \"wds\"",
     "build": "rimraf dist && tsc && node --max-old-space-size=4096 node_modules/vite/bin/vite.js build",
     "start:build": "web-dev-server --root-dir dist --app-index index.html --open",
-    "lint": "eslint \"**/*.{js,ts}\" --ignore-path .gitignore",
+    "lint": "eslint \"**/*.{js,ts}\" --ignore-pattern .gitignore",
     "test": "tsc --project tsconfig.test.json && wtr"
   },
   "dependencies": {
@@ -43,7 +43,7 @@
     "babel-plugin-template-html-minifier": "^4.1.0",
     "concurrently": "^9.1.2",
     "deepmerge": "^4.2.2",
-    "eslint": "^8.57.0",
+    "eslint": "^9.20.0",
     "eslint-plugin-lit": "^1.8.2",
     "igniteui-cli": "^14.0.0",
     "rimraf": "^5.0.10",
