--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "igniteui-cli",
-  "version": "14.3.14",
+  "version": "14.3.15-beta.0",
   "description": "CLI tool for creating Ignite UI projects",
   "keywords": [
     "CLI",
@@ -76,8 +76,8 @@
     "all": true
   },
   "dependencies": {
-    "@igniteui/angular-templates": "~19.0.14314",
-    "@igniteui/cli-core": "~14.3.14",
+    "@igniteui/angular-templates": "~19.0.14315-beta.0",
+    "@igniteui/cli-core": "~14.3.15-beta.0",
     "@inquirer/prompts": "^5.4.0",
     "@types/yargs": "^17.0.33",
     "chalk": "^5.3.0",
