--- a/packages/igx-templates/igx-ts-legacy/projects/_base/files/package.json
+++ b/packages/igx-templates/igx-ts-legacy/projects/_base/files/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser-dynamic": "~19.2.0",
     "@angular/router": "~19.2.0",
     "hammerjs": "~2.0.8",
-    "igniteui-angular": "~19.2.0-beta.0",
+    "igniteui-angular": "~19.2.0",
     "minireset.css": "~0.0.7",
     "rxjs": "~7.8.1",
     "tslib": "~2.6.2",
