--- a/packages/cli/templates/webcomponents/igc-ts/projects/_base/files/package.json
+++ b/packages/cli/templates/webcomponents/igc-ts/projects/_base/files/package.json
@@ -37,7 +37,7 @@
     "deepmerge": "^4.2.2",
     "eslint": "^9.20.0",
     "eslint-plugin-lit": "^1.8.2",
-    "igniteui-cli": "^13.1.5",
+    "igniteui-cli": "~14.4.1",
     "rimraf": "^5.0.10",
     "source-map": "^0.7.4",
     "tslib": "^2.8.1",
