--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "igniteui-cli",
-  "version": "14.4.4",
+  "version": "14.5.0-rc.0",
   "description": "CLI tool for creating Ignite UI projects",
   "keywords": [
     "CLI",
@@ -76,8 +76,8 @@
     "all": true
   },
   "dependencies": {
-    "@igniteui/angular-templates": "~19.2.1444",
-    "@igniteui/cli-core": "~14.4.4",
+    "@igniteui/angular-templates": "~20.0.1450-rc.0",
+    "@igniteui/cli-core": "~14.5.0-rc.0",
     "@inquirer/prompts": "^5.4.0",
     "@types/yargs": "^17.0.33",
     "chalk": "^5.3.0",
