--- a/packages/igx-templates/igx-ts/projects/_base/files/package.json
+++ b/packages/igx-templates/igx-ts/projects/_base/files/package.json
@@ -11,16 +11,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~19.2.0",
-    "@angular/common": "~19.2.0",
-    "@angular/compiler": "~19.2.0",
-    "@angular/core": "~19.2.0",
-    "@angular/forms": "~19.2.0",
-    "@angular/platform-browser": "~19.2.0",
-    "@angular/platform-browser-dynamic": "~19.2.0",
-    "@angular/router": "~19.2.0",
+    "@angular/animations": "~20.0.0",
+    "@angular/common": "~20.0.0",
+    "@angular/compiler": "~20.0.0",
+    "@angular/core": "~20.0.0",
+    "@angular/forms": "~20.0.0",
+    "@angular/platform-browser": "~20.0.0",
+    "@angular/platform-browser-dynamic": "~20.0.0",
+    "@angular/router": "~20.0.0",
     "hammerjs": "~2.0.8",
-    "igniteui-angular": "~19.2.0",
+    "igniteui-angular": "~20.0.0-rc.0",
     "minireset.css": "~0.0.7",
     "rxjs": "~7.8.1",
     "tslib": "~2.6.2",
@@ -28,22 +28,37 @@
   },
   "overrides": {
     "reveal-sdk-wrappers-angular": {
-      "@angular/core": "^19.2.0",
-      "@angular/common": "^19.2.0"
+      "@angular/core": "^20.0.0",
+      "@angular/common": "^20.0.0"
+    },
+    "igniteui-angular-charts": {
+      "@angular/core": "^20.0.0",
+      "@angular/common": "^20.0.0",
+      "@angular/compiler": "^20.0.0"
+    },
+    "igniteui-angular-gauges": {
+      "@angular/core": "^20.0.0",
+      "@angular/common": "^20.0.0",
+      "@angular/compiler": "^20.0.0"
+    },
+    "igniteui-angular-maps": {
+      "@angular/core": "^20.0.0",
+      "@angular/common": "^20.0.0",
+      "@angular/compiler": "^20.0.0"
     }
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~19.2.0",
-    "@angular-eslint/builder": "~19.2.0",
-    "@angular-eslint/eslint-plugin": "~19.2.0",
-    "@angular-eslint/eslint-plugin-template": "~19.2.0",
-    "@angular-eslint/schematics": "~19.2.0",
-    "@angular-eslint/template-parser": "~19.2.0",
-    "@angular/cli": "~19.2.0",
-    "@angular/compiler-cli": "~19.2.0",
+    "@angular-devkit/build-angular": "~20.0.0",
+    "@angular-eslint/builder": "~19.7.0",
+    "@angular-eslint/eslint-plugin": "~19.7.0",
+    "@angular-eslint/eslint-plugin-template": "~19.7.0",
+    "@angular-eslint/schematics": "~19.7.0",
+    "@angular-eslint/template-parser": "~19.7.0",
+    "@angular/cli": "~20.0.0",
+    "@angular/compiler-cli": "~20.0.0",
     "@types/jasmine": "~5.1.4",
-    "@typescript-eslint/eslint-plugin": "~8.25.0",
-    "@typescript-eslint/parser": "~8.25.0",
+    "@typescript-eslint/eslint-plugin": "~8.33.0",
+    "@typescript-eslint/parser": "~8.33.0",
     "eslint": "~9.21.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prefer-arrow": "^1.2.3",
@@ -55,6 +70,6 @@
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.6.2"
+    "typescript": "~5.8.2"
   }
 }
