--- a/packages/igx-templates/igx-ts/projects/side-nav-auth/files/package.json
+++ b/packages/igx-templates/igx-ts/projects/side-nav-auth/files/package.json
@@ -11,32 +11,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~19.2.0",
-    "@angular/common": "~19.2.0",
-    "@angular/compiler": "~19.2.0",
-    "@angular/core": "~19.2.0",
-    "@angular/forms": "~19.2.0",
-    "@angular/platform-browser": "~19.2.0",
-    "@angular/platform-browser-dynamic": "~19.2.0",
-    "@angular/router": "~19.2.0",
+    "@angular/animations": "~20.0.0",
+    "@angular/common": "~20.0.0",
+    "@angular/compiler": "~20.0.0",
+    "@angular/core": "~20.0.0",
+    "@angular/forms": "~20.0.0",
+    "@angular/platform-browser": "~20.0.0",
+    "@angular/platform-browser-dynamic": "~20.0.0",
+    "@angular/router": "~20.0.0",
     "angular-auth-oidc-client": "~15.0.4",
     "hammerjs": "~2.0.8",
-    "igniteui-angular": "~19.2.0",
+    "igniteui-angular": "~20.0.0-rc.0",
     "minireset.css": "~0.0.7",
     "rxjs": "~7.8.0",
     "tslib": "~2.3.0",
     "zone.js": "~0.14.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~19.2.0",
-    "@angular-eslint/builder": "~19.2.0",
-    "@angular-eslint/eslint-plugin": "~19.2.0",
-    "@angular-eslint/eslint-plugin-template": "~19.2.0",
-    "@angular-eslint/schematics": "~19.2.0",
-    "@angular-eslint/template-parser": "~19.2.0",
-    "@angular/cli": "~19.2.0",
-    "@angular/compiler-cli": "~19.2.0",
-    "@angular/language-service": "~19.2.0",
+    "@angular-devkit/build-angular": "~20.0.0",
+    "@angular-eslint/builder": "~19.7.0",
+    "@angular-eslint/eslint-plugin": "~19.7.0",
+    "@angular-eslint/eslint-plugin-template": "~19.7.0",
+    "@angular-eslint/schematics": "~19.7.0",
+    "@angular-eslint/template-parser": "~19.7.0",
+    "@angular/cli": "~20.0.0",
+    "@angular/compiler-cli": "~20.0.0",
+    "@angular/language-service": "~20.0.0",
     "@types/facebook-js-sdk": "~3.3.6",
     "@types/hammerjs": "~2.0.41",
     "@types/jasmine": "~5.1.1",
@@ -51,6 +51,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.5.4"
+    "typescript": "~5.8.2"
   }
 }
