--- a/packages/igx-templates/igx-ts/projects/_base/files/angular.json
+++ b/packages/igx-templates/igx-ts/projects/_base/files/angular.json
@@ -86,6 +86,7 @@
 				"test": {
 					"builder": "@angular-devkit/build-angular:karma",
 					"options": {
+            "main": "src/test.ts",
 						"polyfills": [
 							"zone.js",
 							"zone.js/testing"
