fix: set default route

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -160,6 +160,8 @@
 			"outFiles": ["${workspaceFolder}/**/*.js"],
 			"args": [
 				"add",
+				"--template=grid",
+				"--name=MyGridComponent"
 			]
 		},
 		{
