--- a/packages/igx-templates/igx-ts-legacy/projects/side-nav-auth/files/package.json
+++ b/packages/igx-templates/igx-ts-legacy/projects/side-nav-auth/files/package.json
@@ -11,46 +11,49 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~20.0.0",
-    "@angular/common": "~20.0.0",
-    "@angular/compiler": "~20.0.0",
-    "@angular/core": "~20.0.0",
-    "@angular/forms": "~20.0.0",
-    "@angular/platform-browser": "~20.0.0",
-    "@angular/platform-browser-dynamic": "~20.0.0",
-    "@angular/router": "~20.0.0",
+    "@angular/animations": "~20.3.0",
+    "@angular/common": "~20.3.0",
+    "@angular/compiler": "~20.3.0",
+    "@angular/core": "~20.3.0",
+    "@angular/forms": "~20.3.0",
+    "@angular/platform-browser": "~20.3.0",
+    "@angular/platform-browser-dynamic": "~20.3.0",
+    "@angular/router": "~20.3.0",
     "angular-auth-oidc-client": "~15.0.4",
     "hammerjs": "~2.0.8",
-    "igniteui-angular": "~20.0.0",
+    "igniteui-angular": "~20.1.0",
     "minireset.css": "~0.0.7",
     "rxjs": "~7.8.0",
-    "tslib": "~2.3.0",
+    "tslib": "~2.8.1",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~20.0.0",
-    "@angular-eslint/builder": "~20.0.0",
-    "@angular-eslint/eslint-plugin": "~20.0.0",
-    "@angular-eslint/eslint-plugin-template": "~20.0.0",
-    "@angular-eslint/schematics": "~20.0.0",
-    "@angular-eslint/template-parser": "~20.0.0",
-    "@angular/cli": "~20.0.0",
-    "@angular/compiler-cli": "~20.0.0",
-    "@angular/language-service": "~20.0.0",
+    "@angular-devkit/build-angular": "~20.3.0",
+    "@angular-eslint/builder": "~20.3.0",
+    "@angular-eslint/eslint-plugin": "~20.3.0",
+    "@angular-eslint/eslint-plugin-template": "~20.3.0",
+    "@angular-eslint/schematics": "~20.3.0",
+    "@angular-eslint/template-parser": "~20.3.0",
+    "@angular/cli": "~20.3.0",
+    "@angular/compiler-cli": "~20.3.0",
+    "@angular/language-service": "~20.3.0",
     "@types/facebook-js-sdk": "~3.3.6",
     "@types/hammerjs": "~2.0.41",
-    "@types/jasmine": "~5.1.1",
+    "@types/jasmine": "~5.1.4",
     "@types/jasminewd2": "~2.0.3",
-    "@typescript-eslint/eslint-plugin": "8.21.0",
-    "@typescript-eslint/parser": "8.21.0",
-    "eslint": "~9.20.0",
+    "@typescript-eslint/eslint-plugin": "~8.45.0",
+    "@typescript-eslint/parser": "~8.45.0",
+    "eslint": "~9.36.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-unicorn": "^61.0.2",
     "igniteui-cli": "~<%=cliVersion%>",
-    "jasmine-core": "~5.1.0",
-    "karma": "~6.4.0",
+    "jasmine-core": "~5.11.0",
+    "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
+    "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.8.2"
+    "typescript": "~5.9.2"
   }
 }
