feat: use ng lint schematic to configure project

--- a/packages/igx-templates/igx-ts/projects/_base/files/angular.json
+++ b/packages/igx-templates/igx-ts/projects/_base/files/angular.json
@@ -111,7 +111,6 @@
 				"lint": {
 				  "builder": "@angular-eslint/builder:lint",
 				  "options": {
-            "eslintConfig": "eslint.config.mjs",
 					  "lintFilePatterns": [
 					    "src/**/*.ts",
 					    "src/**/*.html"
@@ -121,7 +120,9 @@
 			}
 		}
 	},
-	"cli": {
-	  "schematicCollections": ["@angular-eslint/schematics"]
-	}
+  "cli": {
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
+  }
 }
