chore(ng): add overrides to remove npm i warnings

--- a/packages/igx-templates/igx-ts/projects/_base/files/package.json
+++ b/packages/igx-templates/igx-ts/projects/_base/files/package.json
@@ -31,7 +31,8 @@
       "@angular/core": "^20.3.0",
       "@angular/common": "^20.3.0"
     },
-    "rxjs": "~7.8.1"
+    "glob": "^11.0.3",
+    "rimraf": "^6.0.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~20.3.0",
