--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "igniteui-cli",
-  "version": "14.6.5-beta.0",
+  "version": "16.0.0-alpha.0",
   "description": "CLI tool for creating Ignite UI projects",
   "keywords": [
     "CLI",
@@ -76,8 +76,8 @@
     "all": true
   },
   "dependencies": {
-    "@igniteui/angular-templates": "~20.1.1465-beta.0",
-    "@igniteui/cli-core": "~14.6.5-beta.0",
+    "@igniteui/angular-templates": "~20.1.1600-alpha.0",
+    "@igniteui/cli-core": "~16.0.0-alpha.0",
     "@inquirer/prompts": "^7.9.0",
     "@types/yargs": "^17.0.33",
     "chalk": "^5.3.0",
