--- a/packages/mcp-server/package.json
+++ b/packages/mcp-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@igniteui/mcp-server",
-  "version": "1.0.0",
+  "version": "16.0.0-alpha.0",
   "description": "Model Context Protocol (MCP) server for Ignite UI CLI",
   "keywords": [
     "MCP",
@@ -32,9 +32,9 @@
     "claude_desktop_config.example.json"
   ],
   "dependencies": {
+    "@igniteui/cli-core": "~16.0.0-alpha.0",
     "@modelcontextprotocol/sdk": "^1.20.0",
-    "@igniteui/cli-core": "~14.6.3",
-    "igniteui-cli": "~14.6.3"
+    "igniteui-cli": "~16.0.0-alpha.0"
   },
   "devDependencies": {
     "@types/node": "^22.5.5",
