--- a/packages/cli/templates/react/igr-ts/projects/_base/files/__dot__github/workflows/node.js.yml
+++ b/packages/cli/templates/react/igr-ts/projects/_base/files/__dot__github/workflows/node.js.yml
@@ -29,5 +29,10 @@ jobs:
     - run: npm i # replace with 'npm ci' after committing lock file from first install
 #    - run: npm run lint
     - run: npm run build
+    - name: Install Playwright browsers
+      run: npx playwright install chromium-headless-shell
     - run: npm run test
+
+    env:
+      CI: 'true'
 
