--- a/packages/cli/templates/webcomponents/igc-ts/projects/_base_with_home/files/package.json
+++ b/packages/cli/templates/webcomponents/igc-ts/projects/_base_with_home/files/package.json
@@ -34,23 +34,23 @@
     "typescript": "~5.7.2"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.20.2",
-    "@typescript-eslint/eslint-plugin": "^8.21.0",
-    "@typescript-eslint/parser": "^8.21.0",
+    "@babel/preset-env": "^7.28.3",
+    "@typescript-eslint/eslint-plugin": "^8.46.0",
+    "@typescript-eslint/parser": "^8.46.0",
     "@web/dev-server": "^0.4.6",
     "babel-plugin-template-html-minifier": "^4.1.0",
-    "concurrently": "^9.1.2",
-    "deepmerge": "^4.2.2",
+    "concurrently": "^9.2.1",
+    "deepmerge": "^4.3.1",
     "eslint": "^9.20.0",
-    "eslint-plugin-lit": "^1.8.2",
-    "igniteui-cli": "^14.5.0",
-    "jsdom": "^26.1.0",
-    "rimraf": "^5.0.10",
-    "source-map": "^0.7.4",
+    "eslint-plugin-lit": "^2.1.1",
+    "igniteui-cli": "~14.6.0",
+    "playwright": "^1.55.1",
+    "rimraf": "^6.0.1",
+    "source-map": "^0.7.6",
     "tslib": "^2.8.1",
-    "vite": "^6.0.10",
-    "vite-plugin-pwa": "^0.21.1",
-    "vite-plugin-static-copy": "^2.2.0",
-    "vitest": "^3.1.3"
+    "vite": "^7.1.16",
+    "vite-plugin-pwa": "^1.0.3",
+    "vite-plugin-static-copy": "^3.1.3",
+    "vitest": "^3.2.4"
   }
 }
