--- a/packages/igx-templates/igx-ts-legacy/projects/_base/files/package.json
+++ b/packages/igx-templates/igx-ts-legacy/projects/_base/files/package.json
@@ -29,7 +29,8 @@
   "overrides": {
     "reveal-sdk-wrappers-angular": {
       "@angular/core": "^20.3.0",
-      "@angular/common": "^20.3.0"
+      "@angular/common": "^20.3.0",
+      "rxjs": "~7.8.1"
     },
     "rxjs": "~7.8.1"
   },
