--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
 	},
 	"devDependencies": {
 		"@inquirer/prompts": "^7.9.0",
-		"@types/jasmine": "^5.1.4",
+		"@types/jasmine": "^5.1.13",
 		"@types/minimatch": "^5.1.2",
 		"@types/node": "^22.5.5",
 		"@typescript-eslint/eslint-plugin": "^8.21.0",
@@ -75,9 +75,9 @@
 		"eslint-plugin-prefer-arrow": "^1.2.3",
 		"eslint-plugin-unicorn": "^52.0.0",
 		"glob": "^11.0.0",
-		"jasmine": "^5.3.0",
+		"jasmine": "5.12.0",
 		"jasmine-spec-reporter": "^7.0.0",
-		"lerna": "^8.1.9",
+		"lerna": "^9.0.1",
 		"lerna-changelog": "^2.2.0",
 		"nyc": "^17.0.0",
 		"resolve": "^1.22.8",
