--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "igniteui-cli",
-  "version": "14.7.1",
+  "version": "15.0.0-alpha.0",
   "description": "CLI tool for creating Ignite UI projects",
   "keywords": [
     "CLI",
@@ -76,8 +76,8 @@
     "all": true
   },
   "dependencies": {
-    "@igniteui/angular-templates": "~20.1.1471",
-    "@igniteui/cli-core": "~14.7.1",
+    "@igniteui/angular-templates": "~20.1.1500-alpha.0",
+    "@igniteui/cli-core": "~15.0.0-alpha.0",
     "@inquirer/prompts": "^7.9.0",
     "@modelcontextprotocol/sdk": "^1.21.0",
     "@types/yargs": "^17.0.33",
