--- a/packages/ng-schematics/package.json
+++ b/packages/ng-schematics/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@igniteui/angular-schematics",
-  "version": "20.1.1471",
+  "version": "20.1.1500-alpha.0",
   "description": "Ignite UI for Angular Schematics for ng new and ng generate",
   "repository": {
     "type": "git",
@@ -20,8 +20,8 @@
   "dependencies": {
     "@angular-devkit/core": "^19.0.0",
     "@angular-devkit/schematics": "^19.0.0",
-    "@igniteui/angular-templates": "~20.1.1471",
-    "@igniteui/cli-core": "~14.7.1",
+    "@igniteui/angular-templates": "~20.1.1500-alpha.0",
+    "@igniteui/cli-core": "~15.0.0-alpha.0",
     "@modelcontextprotocol/sdk": "^1.21.0",
     "@schematics/angular": "~19.0.0",
     "minimatch": "^10.0.1",
