chore: add overrides for DV, until their 21.0 release.

--- a/packages/igx-templates/igx-ts-legacy/projects/_base/files/package.json
+++ b/packages/igx-templates/igx-ts-legacy/projects/_base/files/package.json
@@ -31,6 +31,24 @@
       "@angular/core": "^21.0.0",
       "@angular/common": "^21.0.0",
       "rxjs": "~7.8.1"
+    },
+    "igniteui-angular-charts": {
+      "@angular/core": "^21.0.0",
+      "@angular/common": "^21.0.0",
+      "@angular/compiler": "^21.0.0",
+      "rxjs": "~7.8.1"
+    },
+    "igniteui-angular-gauges": {
+      "@angular/core": "^21.0.0",
+      "@angular/common": "^21.0.0",
+      "@angular/compiler": "^21.0.0",
+      "rxjs": "~7.8.1"
+    },
+    "igniteui-angular-maps": {
+      "@angular/core": "^21.0.0",
+      "@angular/common": "^21.0.0",
+      "@angular/compiler": "^21.0.0",
+      "rxjs": "~7.8.1"
     }
   },
   "devDependencies": {
